--- a/Assignments/StevenCanoy/2c.7/style.css
+++ b/Assignments/StevenCanoy/2c.7/style.css
@@ -10,3 +10,12 @@ canvas {
   padding: 20px;
   background-color: #28b07a;
 }
+
+ .row {
+   display: flex;
+ }
+
+  .column {
+    margin: 10px;
+    flex: 50%;
+  }
