--- a/Assignments/KennyNguyen/Randomizer/randomizerdesigner.css
+++ b/Assignments/KennyNguyen/Randomizer/randomizerdesigner.css
@@ -6,7 +6,7 @@ padding: 0;}
 body { 
   font-family: 'Open Sans', 'sans-serif';
   color: #cecece;
-  background: #222;
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(255,209,209,1) 27%, rgba(255,209,209,1) 32%, rgba(255,209,209,1) 37%, rgba(255,209,209,1) 56%, rgba(0,0,0,1) 69%, rgba(255,209,209,1) 83%, rgba(255,209,209,1) 93%, rgba(255,209,209,1) 100%);
   overflow: hidden;
 }
 
