--- a/Assignments/KennyNguyen/Randomizer/randomizerdesigner.css
+++ b/Assignments/KennyNguyen/Randomizer/randomizerdesigner.css
@@ -6,8 +6,8 @@ padding: 0;}
 body { 
   font-family: 'Open Sans', 'sans-serif';
   color: #cecece;
-  background: rgb(0,0,0);
-  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(255,209,209,1) 27%, rgba(255,209,209,1) 32%, rgba(255,209,209,1) 37%, rgba(255,209,209,1) 56%, rgba(0,0,0,1) 69%, rgba(255,209,209,1) 83%, rgba(255,209,209,1) 93%, rgba(255,209,209,1) 100%);
+  background: rgb(0,159,255);
+	background: linear-gradient(180deg, rgba(0,159,255,1) 0%, rgba(255,255,255,1) 10%, rgba(0,0,0,1) 50%, rgba(255,255,255,1) 90%, rgba(255,0,0,1) 100%);
   overflow: hidden;
 }
 
