--- a/Assignments/KennyNguyen/Randomizer/randomizerdesigner.css
+++ b/Assignments/KennyNguyen/Randomizer/randomizerdesigner.css
@@ -7,7 +7,12 @@ body {
   font-family: 'Open Sans', 'sans-serif';
   color: #cecece;
   background: rgb(0,159,255);
-	background: linear-gradient(180deg, rgba(0,159,255,1) 0%, rgba(255,255,255,1) 10%, rgba(0,0,0,1) 50%, rgba(255,255,255,1) 90%, rgba(255,0,0,1) 100%);
+	background: linear-gradient(180deg,
+		rgba(0,159,255,1) 0%,
+		rgba(255,255,255,1) 10%,
+		rgba(0,0,0,1) 50%,
+		rgba(255,255,255,1) 90%,
+		rgba(255,0,0,1) 100%);
   overflow: hidden;
 }
 
