--- a/Assignments/SophiaMartinez/2.c10/style.css
+++ b/Assignments/SophiaMartinez/2.c10/style.css
@@ -1,6 +1,9 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-image: url("/assets/background.jpeg");
+  background-color: #ffdd99;
+
 }
 canvas {
   display: block;
