--- a/Assignments/UyenHuynh/3.14/style.css
+++ b/Assignments/UyenHuynh/3.14/style.css
@@ -3,19 +3,18 @@ html {
   padding: 0;
 }
 body {
-  display:flex;
-  justify-content: center;
+ margin: 100px auto 0 auto;
+ width: 80%;
+ text-align: CENTER;  
 }
-.instruction{
+/* .instruction{
   z-index: 2;
   position: absolute;
   text-align: center; 
   
-}
+} */
 canvas {
-  /* margin:auto; */
-  top: 0;
-  left: 0;
-  position: absolute;
-  z-index: 1;
+  margin: 100px auto 0 auto;
+  display: block;
+  border: 3px solid gold;
 }
