--- a/Assignments/DanielPerezGomez/3.6/style.css
+++ b/Assignments/DanielPerezGomez/3.6/style.css
@@ -11,7 +11,11 @@ body {
 }
 
 canvas {
-  margin: 0 auto 0 auto;
-  display: block;
-  border: 5px solid black;
+  margin: auto;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
+  /* display: block;
+  border: 5px solid black; */
 }
