--- a/Assignments/KennyNguyen/Drawing Machine/style.css
+++ b/Assignments/KennyNguyen/Drawing Machine/style.css
@@ -1,7 +1,14 @@
-html, body {
+html {
   margin: 0;
   padding: 0;
 }
+
+body {
+  margin: 50px auto 0 auto;
+  width: 80%;
+  text-align: center;
+}
+
 canvas {
   display: block;
   border: 5px, solid black;
