Making some div components responsive

--- a/Assignments/UyenHuynh/drawingmachine/style.css
+++ b/Assignments/UyenHuynh/drawingmachine/style.css
@@ -8,41 +8,42 @@ body {
 }
 .title{
   z-index: 2;
-  position: absolute;
-  text-align: center; 
+  width: 100vw;
+  text-align: center;
   font-family:'Schoolbell', Arial, sans-serif;
   font-size: 30px;
-  color:rgb(102, 123, 180)
-  
+  color:rgb(102, 123, 180);
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 canvas {
   /* margin:auto; */
   top: 0;
   left: 0;
   position: absolute;
-  z-index: 1;
+  z-index: 0;
 }
-
-.instructions{
+.instructions-container {
   z-index: 2;
-  position: absolute;
-  text-align: center;
-  position:absolute;
-  left:100px;
-  top: 150px;
-  line-height: 0.8;
   padding: 20px;
+}
+.instructions{
+  text-align: center;
+  line-height: 0.8;
   font-family:'Schoolbell', Arial, sans-serif;
   font-size: 20px;
   color:rgb(102, 123, 180);
   background-color: rgb(210, 226, 250);
   border-style: dotted;
   border-radius: 20px;
-
+  max-height: 300px;
 }
-.button {
+
+.refresh-button {
   display: inline-block;
-  padding: 15px 25px;
+  padding: 25px;
   font-size: 24px;
   cursor: pointer;
   text-align: center;
@@ -53,6 +54,9 @@ canvas {
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px rgb(212, 212, 212);
+  font-family: 'Schoolbell', Arial, sans-serif;
+  letter-spacing: 1.5px;
+  z-index:2;
 }
 
 .button:hover {background-color: #0e75a5}
@@ -65,10 +69,13 @@ canvas {
 .randomized-text{
   text-align: center;
   font-family:'Schoolbell', Arial, sans-serif;
-  position:absolute;
-  top: 250px;
   color:rgb(102, 123, 180);
+  padding-top: 20px;
   font-size:25px;
+}
 
-
+.top-container {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
 }
