--- a/Assignments/ElizabethClawson/Drawing Machine/style.css
+++ b/Assignments/ElizabethClawson/Drawing Machine/style.css
@@ -1,7 +1,15 @@
-html, body {
+html{
   margin: 0;
   padding: 0;
 }
+body{
+  font-family: sans-serif;
+  font-family: chalkduster;
+  src: url(chalkduster.ttf);
+}
 canvas {
   display: block;
+  border: 10px solid brown;
+  background: rgb(97, 67, 27);
+  border-radius: 50px
 }
