--- a/Assignments/SophiaMartinez/3.0/style.css
+++ b/Assignments/SophiaMartinez/3.0/style.css
@@ -1,19 +1,16 @@
-html, body {
+html {
   height: 100%;
 }
 
 body {
-  margin: 0;
-  display: flex;
-
-  /* This centers our sketch horizontally. */
-  justify-content: center;
-
-  /* This centers our sketch vertically. */
-  align-items: center;
-
+  margin: 50px 100px 50px 50px;
+  width: 70%;
+text-align:left;
   font-family: monospace;
+  font-weight: bold;
 }
 canvas {
   display: block;
+  margin: 0 auto 0 auto;
+  border: 5px solid gray;
 }
