--- a/Assignments/RobertChavez/RC101finalDM/style.css
+++ b/Assignments/RobertChavez/RC101finalDM/style.css
@@ -2,7 +2,7 @@ html {
 
   margin: 0;
   padding: 0,0;
-  background-image: url("assets/light.jpg");
+  background-image: url("assets1/light.jpg");
   background-size: 150%
 }
 
