adding code fixes

--- a/Assignments/RosaSalangsang/drawmach_final/style.css
+++ b/Assignments/RosaSalangsang/drawmach_final/style.css
@@ -5,12 +5,16 @@ html, body {
 
 body{
   text-align: center;
-  background-image: linear-gradient(ghostwhite, paleturquoise);
+  background-attachment:fixed;
+  background-image: linear-gradient(ghostwhite, paleturquoise, skyblue);
+  background-size:cover;
+  background-repeat: no-repeat;
 }
 h1{
   font-size: 35px;
   font-family:"Brush Script MT", cursive;
   }
+
 h3{
   font-family: "Arial Narrow", sans-serif;
 }
@@ -18,13 +22,23 @@ h3{
 canvas {
   display: block;
   background-color: ivory;
-  border: 7px solid black;
+  border: 5px solid black;
   margin: auto;
   position: relative;
-  z-index:-1;
+  bottom:290px;
+  z-index: -2;
 }
 p{
   font-family: "Arial Narrow", sans-serif;
   max-width: 500px;
   margin:auto;
+}
+.artstate{
+  font-family: "Arial Narrow", sans-serif;
+  max-width: 500px;
+  margin:auto;
+  position:relative;
+  top:680px;
+  padding-bottom: 10px;
+  user-select: none;
 }
