--- a/Assignments/SophiaMartinez/3.0/style.css
+++ b/Assignments/SophiaMartinez/3.0/style.css
@@ -3,14 +3,15 @@ html {
 }
 
 body {
-  margin: 50px 100px 50px 50px;
-  width: 70%;
+  margin: 100px auto 0 auto;
+  width: 80%;
 text-align:left;
-  font-family: monospace;
+  font-family: "monospace";
   font-weight: bold;
 }
 canvas {
+  margin: auto;
+  align-content: center;
   display: block;
-  margin: 0 auto 0 auto;
-  border: 5px solid gray;
+
 }
