--- a/Assignments/MadisonMcNamara/drawing_machine/style.css
+++ b/Assignments/MadisonMcNamara/drawing_machine/style.css
@@ -14,10 +14,10 @@ body {
 }
 canvas {
   margin: 0 auto 0 auto;
-  top: 0;
+  /* top: 0;
   left: 0;
   position: absolute;
-  z-index: -1;
+  z-index: -1; */
   display: block;
   border: 5px solid black;
 }
