--- a/Assignments/SophiaMartinez/3.0/style.css
+++ b/Assignments/SophiaMartinez/3.0/style.css
@@ -3,15 +3,15 @@ html {
 }
 
 body {
-  margin: 100px auto 0 auto;
-  width: 80%;
+  margin: auto
+  width: 60%;
 text-align:left;
   font-family: "monospace";
   font-weight: bold;
 }
 canvas {
-  margin: auto;
-  align-content: center;
+  padding-bottom: 50px
+  margin: auto
   display: block;
 
 }
