--- a/Assignments/DanielPerezGomez/3P/style.css
+++ b/Assignments/DanielPerezGomez/3P/style.css
@@ -7,8 +7,13 @@ body {
   margin: 5px auto 0 auto;
   width: 80%;
   text-align: center;
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: black;
+  background-image: linear-gradient(rgba(0,0,0,0.15),rgba(0,0,0,0.15)), url(Background.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
 
 canvas {
@@ -23,4 +28,5 @@ canvas {
   margin: 0 auto;
   padding: 5px;
   text-align: left;
+  line-height: 21px;
 }
