--- a/Assignments/StevenCanoy/drawmachine/style.css
+++ b/Assignments/StevenCanoy/drawmachine/style.css
@@ -1,9 +1,12 @@
 html {
+  
   margin: 0;
   padding: 0;
 }
 
 body {
+  background-color: rgb(4, 224, 249);
+  border: 25px solid rgb(41, 12, 234);
   margin: 100px auto 0 auto;
   width: 80%;
   text-align: center;
@@ -15,6 +18,8 @@ canvas {
   margin: auto;
   top: 0;
   left: 0;
-  position: absolute;
+  position: relative;
+  padding: 1%;
+  border: 10px solid rgb(41, 12, 234);
   z-index: -1;
 }
