--- a/Assignments/AmandaCarrillo/3.10/style.css
+++ b/Assignments/AmandaCarrillo/3.10/style.css
@@ -1,7 +1,18 @@
-html, body {
+html, {
   margin: 0;
   padding: 0;
 }
+
+body{
+  margin:100px auto 0 auto;
+  width: 80%;
+  text-align: center;
+font-family: Georgia, serif;
+}
 canvas {
-  display: block;
+  top:0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
+
 }
