--- a/Assignments/AmandaCarrillo/3.16/style.css
+++ b/Assignments/AmandaCarrillo/3.16/style.css
@@ -1,7 +1,33 @@
-html, body {
+html, {
   margin: 0;
   padding: 0;
+}h1 {
+  font-family: Comic Sans MS;
+  font-size: 4rem;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
+
+h2{
+  font-family: Comic Sans MS;
+  font-size: 2em;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+h3{
+  font-family: sans-serif;
+  font-size: 1em;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 canvas {
-  display: block;
+  top:0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
 }
