--- a/Assignments/StevenCanoy/5.0/style.css
+++ b/Assignments/StevenCanoy/5.0/style.css
@@ -1,20 +1,12 @@
-html {
+html, body {
   margin: 0;
   padding: 0;
 }
 
-body {
-  margin: 100px auto 0 auto;
-  width: 80%;
-  text-align: center;
-  font-family: "courier", monospace;
-}
+
 
 
 canvas {
-  margin: auto;
-  top: 0;
-  left: 0;
-  position: absolute;
-  z-index: -1;
+  display: block;
+  margin: 50px auto 50px auto;
 }
