--- a/Assignments/StevenCanoy/Game/style.css
+++ b/Assignments/StevenCanoy/Game/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  background-image: linear-gradient(to bottom right, red, yellow);
+  background-image: linear-gradient(to bottom right, rgb(255, 0, 212), yellow);
   border: 25px solid rgb(250, 250, 252);
   margin: 100px auto 0 auto;
   width: 80%;
