--- a/Assignments/AlexandraHisen/4.0/style.css
+++ b/Assignments/AlexandraHisen/4.0/style.css
@@ -1,7 +1,11 @@
 html, body {
   margin: 0;
   padding: 0;
+ /* background-image:('complex_honeycomb');  */
+ background-size: cover;
 }
+
+
 canvas {
   display: block;
   margin: 50px auto;
