--- a/Assignments/HaomiaoWang/4/style.css
+++ b/Assignments/HaomiaoWang/4/style.css
@@ -5,6 +5,8 @@ html, body {
 
 canvas {
   display: block;
-  margin: 50px auto
+  margin: 50px auto 50px auto;
+  /* margin-left:  auto;
+  margin-right: auto; */
 
 }
