--- a/Assignments/SophiaMartinez/Game/style.css
+++ b/Assignments/SophiaMartinez/Game/style.css
@@ -1,9 +1,12 @@
 html, body{
   margin: 0;
   padding: 0;
-  background-image: url("images4game/background2.png");
-  background-size: 1500px;
-  background-repeat: no-repeat;
+  background-image: url("images4game/gluttony.png");
+  background-size: 50%;
+  /* background-position: left bottom; */
+  background-attachment: scroll;
+  /* background-repeat: no-repeat; */
+  background-color: (51, 82, 168);
 
 
 }
@@ -11,6 +14,7 @@ html, body{
 canvas {
   display: block;
   margin: 50px auto 50px auto ;
+  background-color: (51, 82, 168);
 }
 
 
